--- a/_posts/2024-10-09-test-post.md
+++ b/_posts/2024-10-09-test-post.md
@@ -17,8 +17,8 @@ title: Test
 ---
 
 <figure class="figure">
-{%- if include.img -%}<img src="{{ include.img | relative_url }}" class="figure-content"{% if include.width %} width="{{ include.width }}"{% endif %}>{%- endif -%}
-{%- if include.caption -%}<figcaption class="figure-caption">{{ include.caption }}</figcaption>{%- endif -%}
+<img src="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
+<figcaption class="figure-caption">Google Logo</figcaption>
 </figure>
 
 ---
@@ -26,28 +26,13 @@ title: Test
 {%- include figure.html
     caption="Google Logo"
     img="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png"
-    width=288 -%}
+-%}
 
----
+> {{ 2024-10-09 | date: "%Y-%m-%d" }}, {{ page.date | date: "%Y-%m-%d" }}
 
-{%- include figure.html caption="Google Logo" img="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png" width=288 -%}
+> {{ 2024-10-09 | date: "%Y/%m/%d" }}, {{ page.date | date: "%Y/%m/%d" }}
 
----
-
-{%- include figure.html
-    caption="Google<br>Logo"
-    img="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png"
-    width=288 -%}
-
----
-
-> {{ 2024-10-09 | date: "%Y-%m-%d" }}
-
-> {{ 2024-10-09 | date: "%Y/%m/%d" }}
-
-> {{ 2024-10-09 | date: {{ site.date_format }} }}
-
-> {{ page.date | date: {{ site.date_format }} }}
+> {{ 2024-10-09 | date: site.date_format }}, {{ page.date | date: site.date_format }}
 
 > {{ page.date }}, {{ site.date_format }}
 
