--- a/_posts/2024-10-09-test-post.md
+++ b/_posts/2024-10-09-test-post.md
@@ -9,24 +9,21 @@ title: Test
 
 ---
 
-<figure>
-<img src="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
-<figcaption>Google Logo</figcaption>
-</figure>
-
----
-
-<figure class="figure">
-<img src="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
-<figcaption class="figure-caption">Google Logo</figcaption>
-</figure>
-
----
 
 {%- include figure.html
     caption="Google Logo"
     img="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png"
 -%}
+
+
+---
+
+{%  include figure.html
+    caption="Google Logo"
+    img="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png"
+    width=100  %}
+
+---
 
 > {{ 2024-10-09 | date: "%Y-%m-%d" }}, {{ page.date | date: "%Y-%m-%d" }}
 
